Update CRUD Bus